assets/css/style.scss
---
---

// Headers
$header-bg-color: #04587B !default;
$header-bg-color-secondary: #155799 !default;

// Text
$section-headings-color: #04587B !default;

$dark: black;

@import 'jekyll-theme-cayman';
@import "bulma-scss/utilities/_all";
@import "bulma-scss/grid/columns";
@import "bulma-scss/components/_message";
@import "bulma-scss/components/_navbar";
@import "bulma-scss/components/_panel";
@import "bulma-scss/components/_card";
@import "bulma-scss/components/_dropdown";
@import "bulma-scss/components/_breadcrumb";
@import "bulma-scss/components/_modal";
@import "bulma-scss/elements/_button";
@import "bulma-scss/elements/_tag";
@import "bulma-scss/form/_all";
@import "chosen";

:root {
  --navbar-height-normal: 80px;
  --navbar-height-mobile: 64px;
}

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.panel ul {
  padding-left: 1.5rem;
  margin: 0;
}

body {
  padding-top: var(--navbar-height-normal);
}

.navbar-brand {
  //h1 {
    //margin: .5rem 0;
  //}
  .navbar-item {
    &:focus,
    &:hover,
    &.is-active {
      background: transparent !important;
    }
  }
  //background-position: center center;
  //background-size: cover;
  //background-image: url('/images/asia_vir_2016.jpg');

  img {
    max-height: 4rem; // change this to change size of logo
  }
}

.navbar-end {
  margin-right: 2.5rem; // increase this to further center links
}

@media screen and (max-width: 1023px) {
 .navbar.is-fixed-top .navbar-menu, .navbar.is-fixed-top-touch .navbar-menu {
   max-height: calc(100vh - var(--navbar-height-mobile) - 2rem);
 }

 .navbar-brand img {
   max-height: 3rem;
 }

 body {
   padding-top: var(--navbar-height-mobile);
 }
}

html, body {
    height:100%;
    width:100%;
    margin:0;
}

.h_iframe iframe {
    width:100%;
    height:1142px;
}
.h_iframe {
    height: 1142px;
    width:100%;
}

.badge {
  border-radius: 4px;
  background-color: gold;
  padding-bottom: calc(0.375em - 1px);
  padding-top: calc(0.375em - 1px);
  padding-left: 0.75em;
  padding-right: 0.75em;
  margin-left: 0.5em;
  font-size: 1rem;
  line-height: 1.5;
  white-space: nowrap;
}
.badge.lighter {
  background-color: transparent;
  border: 1px solid;
}
.tag.best-paper {
  background: gold;
  color: #04587B;
}

.person__list {
  display: flex;
  flex-wrap: wrap;
  margin-right: -1rem;
}

.person__item {
  border: 2px solid rgba(96, 108, 113, 0.5);
  border-radius: 0.3rem;
  padding: 1rem;
  text-align: center;
  margin-right: 1rem;
  margin-bottom: 1rem;
  position: relative;
  display: block;
  width: calc(25% - 1rem);
}

@media only screen and (max-width: 950px) {
  .person__item {
    width: calc(33.33% - 1rem);
  }
}

@media only screen and (max-width: 650px) {
  .person__item {
    width: calc(50% - 1rem);
  }
}

@media only screen and (max-width: 350px) {
  .person__item {
    width: 100%;
  }
}

a.person__item:hover {
  text-decoration: none;

  .person__affil, .person__name {
    text-decoration: underline;
  }

  .person__title {
    text-decoration: none;
  }
}

.person__affil {
  font-size: small;
}

.person__title {
  font-size: 0.9rem;
  margin-top: 5px;
  font-weight: 600;
}

.person__item {
  color: rgb(96, 108, 113);
}

.person__name {
  display: inline-block;
  margin-top: 1rem;
}

.person__pic-wrapper {
  width: 100%;
  position: relative;
  padding-top: 100%;
  height: 0;
  overflow: hidden;
}

.person__pic {
  position: absolute;
  top: 0;
  width: 100%;
  display: block;
  height: auto;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,.15);
}

.collapsible-header {
  cursor: pointer;

  h2, p {
    margin: 0;
  }

  &:hover {
    text-decoration: underline;
  }

  &:before {
    content: "+";
    font-size: 1.8em;
    margin-left: 0.5em;
    margin-right: 0.5em;
    float: left; 
    transition: transform 0.33s ease-in-out;
    transform-origin: 50% 24px;
  }
}

@media screen and (max-width: 650px) {
  .collapsible-header {
    &:hover {
      text-decoration: none;
    }
  }
}

.is-expanded .collapsible-header {
  &:before {
    transform: rotate(-225deg);
  }
}

.collapsible-content {
  max-height: 0;
  height: auto;
  overflow: hidden;
  transition: max-height 0.33s;
  padding: 0;

  .collapsible-content-inner {
    padding: 1.5rem;
  }
}

.collapsible.is-expanded .collapsible-content {
  max-height: 10000em;
}

#sections .subsection {
  float: left;

  .card-content, .card-footer {
    display: none;
  }
}

#sections .subsection.is-expanded {
  .card-content, .card-footer {
    display: block;
  }
}

#sections .subsection {
  margin-bottom: 1rem;
  width: 100%;
}

#sections #reset {
  display: none;
}

#sections.ml-filtering {
  #reset { display: initial; }
  .ml-filtered { display: none; }
}

#sections.topic-filtering {
  #reset { display: initial; }
  .topic-filtered { display: none; }
}

#sections.thematic-filtering {
  #reset { display: initial; }
  .thematic-filtered { display: none; }
}

#sections.section-filtering {
  #reset { display: initial; }
  .section-filtered { display: none; }
}

.all-filtered {
  display: none;
}

.keywords.field {
  display: inline-block;
  margin-right: 1rem;
  vertical-align: top;
}

#sections .card-footer-item p {
  margin-bottom: 0;
  .tag:hover {
    cursor: pointer;
  }
}

#sections .card-header-title {
  display: block;
}

.paper-flags {
  float: right;
  white-space: nowrap;
}

@media screen and (max-width: 650px) {
  .paper-flags {
    float: none;
    white-space: normal;
  }
}

.tag.paper-flag {
  background: white;
  border: 1px solid;
  margin-top: 1px;
  vertical-align: text-top;
}

.tag.is-high-leverage {
  color: rgb(3,117,180);
}
.tag.is-long-term {
  color: rgb(0,120,73);
}
.tag.is-uncertain-impact {
  color: rgb(219,175,0);
}

#section-select {
  font-size: 0.85rem;
}

summary::-moz-list-bullet { list-style-type: none;  }
summary::-webkit-details-marker {display: none; }
details > summary::before { content:"►"; }
details[open] > summary::before { content:"▼" }

summary {
  cursor: pointer;
}

details[open] > summary {
  margin-bottom: 1rem;
}

details {
  font-size: 14px;
  margin-top: 5px !important;
  margin-bottom: 5px;
  padding: 5px;
  border: 1px solid #eee;
  background: #f8f8f8;
}

// Ensure that anchor links don't skip the headers
@media screen and (min-width: 1024px) {
  h1, h2, h3 {
    scroll-margin-top: var(--navbar-height-normal);
    scroll-snap-margin-top: var(--navbar-height-normal);
  }
}
@media screen and (max-width: 1023px) {
  h1, h2, h3 {
    scroll-margin-top: var(--navbar-height-mobile);
    scroll-snap-margin-top: var(--navbar-height-mobile);
  }
}

p:last-child {
  margin-bottom: 0;
}

td {
  vertical-align: top;
}

.paper .card-content {
  font-size: 14px;
}

.paper + .paper {
  margin-top: 1rem;
}

.paper details {
  margin-bottom: 1rem;
}

.breadcrumb ul {
  padding-left: 0;
}

.breadcrumb .next-prev {
  margin-left: auto;
}

.breadcrumb .next-prev::before {
  content: "";
}

.cursor-no {
  cursor: not-allowed;
}

.paper-table,
.remote-workshop-table-subrow {
  font-size: 14px;
}

.webinar {
  padding: 1rem;

  .webinar-title {
    margin-top: 0.5rem;
    margin-bottom: 0;
  }

  .webinar-subtitle {
    font-style: italic;
    margin-bottom: 1rem;
  }

  details {
    margin-bottom: 1rem;
  }

  .button {
    margin-top: 1rem;
  }
}

.webinar-table {
  td:first-child {
    white-space: nowrap;
  }

  td:last-child {
    width: 100%;
  }
}

.remote-workshop-table {
  td.fill-utc, td.fill-local {
    white-space: nowrap;
    width: 6rem;
    text-align: center;
  }

  td:last-child {
    width: 100%;
  }

  details .tag {
    height: 1.67em;
  }
}


.abstract-header {
  margin-top: 1rem !important;
}

.abstract-text {
  font-size: 14px;
}

.site-footer__media-link {
  float: right;
  font-size: 20px;
  margin-left: 10px;
  margin-top: -5px;
}

.main-content #recruitment-subnav {
  margin: 0;
  padding: 0;
}

.carousel {
  display: none;

  &.slick-initialized {
    display: block;
  }
}

.carousel__item {
  min-height: 16rem !important;
  position: relative;
}

.slick-active {
  border-left: 1px solid #ccc;
  margin-left: -1px;
}

.slick-initialized .slick-cloned:last-child {
  margin-left: -1px;
}

.carousel__background, .carousel__link {
  position: absolute;
  height: 50%;
  left: 0;
  width: 100%;
}

.carousel__background {
  top: 0;
}

.carousel__link {
  top: 50%;
  font-size: 0.9em;
}

.carousel__background {
  background-size: cover;
  background-position-y: 50%;
  background-position-x: 50%;
}

.slick-list {
  outline: 1px solid #ccc;
}

.carousel__link {
  padding: 1rem;
  display: inline-block;
  color: rgb(96, 108, 113);
}

.carousel .slick-prev:before,
.carousel .slick-next:before {
  color: rgb(96, 108, 113);
}

.carousel .slick-prev,
.carousel .slick-next {
  height: 100%;
}

@media screen and (max-width: 768px) {
  .carousel {
    width: calc(100% - 2rem);
    margin: 0 auto;
  }
}

@media screen and (max-width: 480px) {
  .carousel__link {
    font-size: 1em;
  }

  .carousel__item {
    min-height: 12rem !important;
  }
}

.slick-slider
{
    position: relative;

    display: block;
    box-sizing: border-box;

    -webkit-user-select: none;
       -moz-user-select: none;
        -ms-user-select: none;
            user-select: none;

    -webkit-touch-callout: none;
    -khtml-user-select: none;
    -ms-touch-action: pan-y;
        touch-action: pan-y;
    -webkit-tap-highlight-color: transparent;
}

.slick-list
{
    position: relative;

    display: block;
    overflow: hidden;

    margin: 0;
    padding: 0;
}
.slick-list:focus
{
    outline: none;
}
.slick-list.dragging
{
    cursor: pointer;
    cursor: hand;
}

.slick-slider .slick-track,
.slick-slider .slick-list
{
    -webkit-transform: translate3d(0, 0, 0);
       -moz-transform: translate3d(0, 0, 0);
        -ms-transform: translate3d(0, 0, 0);
         -o-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
}

.slick-track
{
    position: relative;
    top: 0;
    left: 0;

    display: block;
    margin-left: auto;
    margin-right: auto;
}
.slick-track:before,
.slick-track:after
{
    display: table;

    content: '';
}
.slick-track:after
{
    clear: both;
}
.slick-loading .slick-track
{
    visibility: hidden;
}

.slick-slide
{
    display: none;
    float: left;

    height: 100%;
    min-height: 1px;
}
[dir='rtl'] .slick-slide
{
    float: right;
}
.slick-slide img
{
    display: block;
}
.slick-slide.slick-loading img
{
    display: none;
}
.slick-slide.dragging img
{
    pointer-events: none;
}
.slick-initialized .slick-slide
{
    display: block;
}
.slick-loading .slick-slide
{
    visibility: hidden;
}
.slick-vertical .slick-slide
{
    display: block;

    height: auto;

    border: 1px solid transparent;
}
.slick-arrow.slick-hidden {
    display: none;
}

